Handles mouse clicks between apps in apps grid, preventing app_list close

Bug: 894328
Change-Id: Ia12904740ef4f57643233d26710c704908cca1c8
Reviewed-on: https://chromium-review.googlesource.com/c/1309420
Reviewed-by: Weidong Guo <weidongg@chromium.org>
Commit-Queue: Kevin Strohbehn <ginko@google.com>
Cr-Commit-Position: refs/heads/master@{#604435}
Former-commit-id: 4fa8ff7ec167eece5ddb49b57cc02f1b17597a5e